Migrate Diggus Maximus to Minecraft 26.2 beta